# perekladach

./: Cargo.toml
configuration/: config.yaml
migrations/: 20220427033443_create-users-table.sql
src/: auth.rs  configuration.rs  language_tag.rs  lib.rs  slug.rs  startup.rs  storage.rs  utils.rs
src/database/: chapter.rs  mod.rs  page.rs  project.rs  token.rs  user.rs
src/middlewares/: auth.rs
src/routes/: mod.rs
src/routes/chapters/: mod.rs
src/routes/pages/: mod.rs
src/routes/projects/: mod.rs
src/routes/users/: login.rs  logout.rs  mod.rs
tests/api/: helpers.rs  main.rs
tests/api/chapters/: get.rs  post.rs
tests/api/page/: get.rs  mod.rs  post.rs
tests/api/projects/: get.rs  mod.rs  post.rs
tests/api/users/: login.rs  logout.rs  mod.rs  post.rs
